[package]
name = "near_pump_listener_using_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
near_event_listener = { git = "https://github.com/hasselalcala/near_event_listener" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
base64 = "0.22.1"
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.12"
serde_json = "1.0.133"
near-sdk = "5.6.0"
serde = "1.0.215"
futures-util = "0.3.31"
warp = "0.3.7"